--- a/html/index.html
+++ b/html/index.html
@@ -186,5 +186,27 @@
           </div>
         </div>
     </section>
+    <section class="section-2">
+      <div class="container p-5">
+         <div class="row text-center">
+           <div class="col-md-3">
+             <h2 class="text-danger bold">100</h2>
+             <p class="text-white">دارای جوایز بین المللی</p>
+           </div>
+           <div class="col-md-3">
+             <h2 class="green bold">10</h2>
+             <p class="text-white">10 سال تجربه</p>
+           </div>
+           <div class="col-md-3">
+             <h2 class="text-info bold">1000</h2>
+             <p class="text-white">دارای ۱۰۰۰ مشتری وفادار</p>
+           </div>
+           <div class="col-md-3">
+             <h2 class="h2 bold">10</h2>
+             <p class="text-white">دارای بهترین زبان برنامه نویسی</p>
+           </div>
+         </div>
+      </div>
+    </section>
 </body>
-</html>
+</html> 
