--- a/html/index.html
+++ b/html/index.html
@@ -249,5 +249,72 @@
           </div>
         </div>
     </section>
+    <section>
+      <div class="container text-center p-5">
+        <div class="row p-5 fs-1">
+          <p>ویژگی های اصلی</p>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-export.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">مدیریت</p>
+            <p class="text-muted mb-5">دارای پنل مدیریت وردپرس</p>
+          </div>
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-layouts.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">دارای سئو عالی</p>
+            <p class="text-muted mb-5">این قالب سئو عالی دارد</p>
+          </div>
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-builder.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">افزونه ووکامرس</p>
+            <p class="text-muted mb-5" >دارای افزونه ووکامرس برای خرید و فروش می باشد</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-commerce.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">دارای افرونه صفحه ساز</p>
+            <p class="text-muted mb-5">این قالب دارای افرونه صفحه ساز می باشد</p>
+          </div>
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-mobile.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">پشتیبانی</p>
+            <p class="text-muted mb-5" >این قالب ار سایت آیلین وب پشتیبانی می شود</p>
+          </div>
+          <div class="col-md-4">
+            <img src="../img/builder-blurbs-modules.jpg" class="img-fluid" alt="">
+            <p class=" fs-5 mt-4">امنیت وب شما</p>
+            <p class="text-muted mb-5">وب سایت شما با افزونه های زیادی که برای امنیت وب شماست نصب و فعال شده اند و امنیت سایت شما خیلی پیشرفته است .</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-4">
+        <div class="container p-5">
+            <div class="row text-center">
+              <p class="text-white fs-3 p-5">بهترین طرح برای یک وبسایت در قالب دیوی</p>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="../img/d2-placeholder-320px.png" class="img-fluid " alt="">
+              </div>
+              <div class="col-md-4">
+                <img src="../img/d2-placeholder-320px.png" class="img-fluid" alt="">
+              </div>
+              <div class="col-md-4 text-center padding">
+                <i class="bi bi-check-circle bii"></i>
+                <p class="text-white"> طرح های این قالب</p>
+                <p class="text-muted">این قالب طرح های مختلف دارد.</p>
+                <i class="bi bi-check-circle biii"></i>
+                <p class="text-white"> کاربرد این قالب کجاست ؟</p>
+                <p class="text-white">قالب برای سایت فروشگاهی است</p>
+                <i class="bi bi-check-circle biit"></i>
+                <p class="text-white">این قالب با فروشگاه کاملآ سازگاری دارد</p>
+                <p class="text-white">این قالب با سایت فروشگاه کاملآ سازگاری دارد</p>
+              </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html> 
