--- a/html/index.html
+++ b/html/index.html
@@ -338,9 +338,7 @@
         <div class="row text-end">
           <p class="fs-1"><i class="bi bi-facebook"></i> <i class="bi bi-instagram "></i> <i class="bi bi-twitter"></i></p>
         </div>
-      </div>
-      
+      </div>~
     </footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 </body>
 </html> 
