--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>وب سایت </title>
-    <link rel="stylesheet" href="../reset/reset.css">
+    <link rel="stylesheet" href="../assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-3Wg4cUtDziGc50xL4PCr98iap+jlvY2rTTsQU5F2vcf+KROJydycFaCjmlZVA1oG" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../responcive/responcive.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/responcive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body dir="rtl">
     <nav class="navbar navbar-expand-lg navbar-light bg-white p-md-4 fixed-top ">
-        <img src="../img/logo.png" alt="javascript:void(0)" class="img-fluid pad">
+        <img src="../assets/img/logo.png" alt="javascript:void(0)" class="img-fluid pad">
         <div class="container data">
             <div class="div">
                 <a href="javascript:void(0)"> <img src="https://img.icons8.com/windows/32/000000/search--v1.png" width="25px" class="me-5 img"/> </a>
@@ -80,7 +80,7 @@
       <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/d2-placeholder-1920.png" class="d-block w-100" alt="javascript:void(0)">
+            <img src="../assets/img/d2-placeholder-1920.png" class="d-block w-100" alt="javascript:void(0)">
             <div class="carousel-caption  d-md-block top-50 dark">
                 <h2>خوش امدید به وب سایت ما</h2>
                 <p>به وب سایت ما خوش امدید</p>
@@ -95,7 +95,7 @@
                       <p>با سلام به ما نزدیک تر هم شوید بد نیس</p>
                        <button type="button" class="btn btn-outline-light">دارید به ما نزدیک تر میشوید ؟<i class="bi bi-chevron-right"></i></button>
                       </div>
-                      <div class="col-md-6 d-none d-md-block mg"><img src="../img/d2-placeholder-510px.png" class="w-100" alt="javascript:void(0)" m-md-5> </div>
+                      <div class="col-md-6 d-none d-md-block mg"><img src="../assets/img/d2-placeholder-510px.png" class="w-100" alt="javascript:void(0)" m-md-5> </div>
 
               </div>
              </div>
@@ -111,8 +111,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <section>
       <div class="container pt-5 ">
          <div class="row">
@@ -170,7 +168,7 @@
             <p  class="text-white"> بالا یعنی این که کاربران سخت به پنل مدیریت دسترسی داشته باشند</p>
           </div>
           <div class=row>
-              <img src="../img/d2-placeholder-1080px.jpg" alt="javascript:void(0)">
+              <img src="../assets/img/d2-placeholder-1080px.jpg" alt="javascript:void(0)">
             </div>
           </div>
           <div class="row text-white p-5 ms-5">
@@ -240,7 +238,7 @@
               </div>
           </div>
           <div class="col-md-3 p-0 bg-dark">
-            <img src="../img/galaxy-note-4-wallpaper1-e1409186538478-600x400.jpg" class="img-fluid" alt="javascript:void(0)">
+            <img src="../assets/img/galaxy-note-4-wallpaper1-e1409186538478-600x400.jpg" class="img-fluid" alt="javascript:void(0)">
             <div class="dark-1">
               <span class="span-1"><i class="bi bi-plus-circle-fill"></i> </span>
               <a class="nav-link text-white fs-5" href="javascript:void(0)">خلاقیت در تصویر</a>
@@ -256,34 +254,34 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-export.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-export.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">مدیریت</p>
             <p class="text-muted mb-5">دارای پنل مدیریت وردپرس</p>
           </div>
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-layouts.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-layouts.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">دارای سئو عالی</p>
             <p class="text-muted mb-5">این قالب سئو عالی دارد</p>
           </div>
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-builder.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-builder.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">افزونه ووکامرس</p>
             <p class="text-muted mb-5" >دارای افزونه ووکامرس برای خرید و فروش می باشد</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-commerce.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-commerce.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">دارای افرونه صفحه ساز</p>
             <p class="text-muted mb-5">این قالب دارای افرونه صفحه ساز می باشد</p>
           </div>
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-mobile.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-mobile.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">پشتیبانی</p>
             <p class="text-muted mb-5" >این قالب ار سایت آیلین وب پشتیبانی می شود</p>
           </div>
           <div class="col-md-4">
-            <img src="../img/builder-blurbs-modules.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-modules.jpg" class="img-fluid" alt="">
             <p class=" fs-5 mt-4">امنیت وب شما</p>
             <p class="text-muted mb-5">وب سایت شما با افزونه های زیادی که برای امنیت وب شماست نصب و فعال شده اند و امنیت سایت شما خیلی پیشرفته است .</p>
           </div>
@@ -297,10 +295,10 @@
             </div>
             <div class="row">
               <div class="col-md-4">
-                <img src="../img/d2-placeholder-320px.png" class="img-fluid " alt="">
+                <img src="../assets/img/d2-placeholder-320px.png" class="img-fluid " alt="">
               </div>
               <div class="col-md-4">
-                <img src="../img/d2-placeholder-320px.png" class="img-fluid" alt="">
+                <img src="../assets/img/d2-placeholder-320px.png" class="img-fluid" alt="">
               </div>
               <div class="col-md-4 text-center padding">
                 <i class="bi bi-check-circle bii"></i>
@@ -340,5 +338,6 @@
         </div>
       </div>~
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 </body>
 </html> 
