--- a/html/index.html
+++ b/html/index.html
@@ -254,34 +254,34 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-export.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-export.jpg" class="img-fluid develop" alt="">
             <p class=" fs-5 mt-4">مدیریت</p>
-            <p class="text-muted mb-5">دارای پنل مدیریت وردپرس</p>
+            <p class="text-muted mb-5 ">دارای پنل مدیریت وردپرس</p>
           </div>
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-layouts.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-layouts.jpg" class="img-fluid develop" alt="">
             <p class=" fs-5 mt-4">دارای سئو عالی</p>
             <p class="text-muted mb-5">این قالب سئو عالی دارد</p>
           </div>
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-builder.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-builder.jpg" class="img-fluid develop" alt="">
             <p class=" fs-5 mt-4">افزونه ووکامرس</p>
             <p class="text-muted mb-5" >دارای افزونه ووکامرس برای خرید و فروش می باشد</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-commerce.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-commerce.jpg" class="img-fluid develop" alt="">
             <p class=" fs-5 mt-4">دارای افرونه صفحه ساز</p>
             <p class="text-muted mb-5">این قالب دارای افرونه صفحه ساز می باشد</p>
           </div>
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-mobile.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-mobile.jpg" class="img-fluid develop" alt="">
             <p class=" fs-5 mt-4">پشتیبانی</p>
             <p class="text-muted mb-5" >این قالب ار سایت آیلین وب پشتیبانی می شود</p>
           </div>
           <div class="col-md-4">
-            <img src="../assets/img/builder-blurbs-modules.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/builder-blurbs-modules.jpg" class="img-fluid develop " alt="">
             <p class=" fs-5 mt-4">امنیت وب شما</p>
             <p class="text-muted mb-5">وب سایت شما با افزونه های زیادی که برای امنیت وب شماست نصب و فعال شده اند و امنیت سایت شما خیلی پیشرفته است .</p>
           </div>
