--- a/html/index.html
+++ b/html/index.html
@@ -148,9 +148,11 @@
             <i class="bi bi-image font-size ico"></i>
             <p class="fw-bold item">سئو</p>
             <p class="text-muted item">دارای بالا ترین سئو از قالب سایت های ایرانی</p>
-
           </div>
         </div>
+         </div>
+         <div class="row text-end fs-1 me-5 text-primary p-4">
+          <i class="bi-1 bi-arrow-up-right-circle-fill "></i>
          </div>
       </div>
     </section>
