--- a/html/index.html
+++ b/html/index.html
@@ -16,10 +16,12 @@
         <img src="../assets/img/logo.png" alt="javascript:void(0)" class="img-fluid pad">
         <div class="container data">
             <div class="div">
-                <a href="javascript:void(0)"> <img src="https://img.icons8.com/windows/32/000000/search--v1.png" width="25px" class="me-5 img"/> </a>
-                <!-- <form>
-                    <input type="text" name="search" placeholder="Search..">
-                  </form> -->
+                <a href="javascript:void(0)"> <img src="https://img.icons8.com/windows/32/000000/search--v1.png" width="25px" class="me-5 img img-1"/> </a>
+                <form role="search " method="get">
+                    <input type="text" name="search" placeholder="Search.." class="w-50">
+        
+                  <button type="button" class="btn-close" aria-label="Close" ></button>
+                  </form>
         </div>
         <i class="bi bi-cart-fill me-4"></i>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
